[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/Main_Menu/EMPTY.png" type="Texture" id=2]
[ext_resource path="res://textures/Main_Menu/ВЫЙТИ.png" type="Texture" id=3]
[ext_resource path="res://textures/Main_Menu/ИГРАТЬ.png" type="Texture" id=4]
[ext_resource path="res://textures/Main_Menu/Фон_ГМ.png" type="Texture" id=5]

[node name="MainMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 654.0
margin_top = 296.0
margin_right = 1266.0
margin_bottom = 756.0
rect_pivot_offset = Vector2( 300, 221 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 612.0
margin_bottom = 460.0
custom_constants/separation = 20

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 306, 70 )
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 612.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 360, 70 )
icon = ExtResource( 3 )
flat = true
clip_text = true
icon_align = 1

[node name="ConstructorButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 612.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 306, 70 )
icon = ExtResource( 2 )
flat = true
clip_text = true
icon_align = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 111.0
margin_top = 980.0
margin_right = 151.0
margin_bottom = 1020.0
